--- a/src/components/Sections/sections.css
+++ b/src/components/Sections/sections.css
@@ -1,8 +1,43 @@
-#header{
-
+section{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: brightness(.9);
 }
 
+/* Home Section */
+    #home{
+        background-image: url("./src/assets/home.svg");
+    }
+/* About Section */
+    #about{
+        background-image: url("./src/assets/about.svg");
+    }
+/* Skills Section */
+    #skills{
+        background-image: url("./src/assets/skills.svg");
+    }
+/* Skills Section */
+    #projects{
+        background-image: url("./src/assets/projects.svg");
+    }
+/* Contact Section */
+    #contact{
+        background-image: url("./src/assets/contact.svg");
+    }
 /* My Skills Section */
+    .skillsScroller{
+        
+    }
+    .skillsScroller li{
+        /* color: #30acffaa; */
+    }
+    .skillsScroller li:hover{
+        transform: scale(1.05);
+        color: #4facf7;
+        filter: drop-shadow(0 0 .5em #4facf7);
+        transition: all 300ms;
+    }
     /* .skills-container{
         display: flex;
         flex-wrap: wrap;
