--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   /* box-sizing: border-box; */
 }
 
-:root {
+:root, body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -12,11 +12,18 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  scroll-behavior: smooth;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
+  font-family: "Yatra One", system-ui;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.87);
 }
 
 section{
@@ -25,16 +32,42 @@ section{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
-.hidden .content{
-    opacity: 0;
-    filter: blur(5px);
-    transition: all 1s;
+.hidden.animate{
+  opacity: 0;
+  filter: blur(5px);
+  transition: all 1s;
+  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.show .content{
-    opacity: 1;
-    filter: blur(0);
+.show.animate{
+  opacity: 1;
+  filter: blur(0);
+}
+
+.hidden.animate.slide{
+  transform-origin: right;
+  transform: translateX(-100%);
+}
+.show.animate.slide{
+  transform: translateX(0);
+}
+
+.hidden.animate.slide[data-direction="right"]{
+  transform-origin: left;
+  transform: translateX(100%);
+}
+.hidden.animate.slide[data-direction="up"]{
+  transform-origin: bottom;
+  transform: translate(0, -100%);
+}
+.hidden.animate.slide[data-direction="down"]{
+  transform-origin: bottom;
+  transform: translate(0, 200%);
+}
+.show.animate.slide[data-direction="right"], .show.animate.slide[data-direction="up"], .show.animate.slide[data-direction="down"]{
+  transform: translate(0, 0);
 }
 
 /* a {
