skills section complete

--- a/src/components/Data_Scroller/Data_Scroller.css
+++ b/src/components/Data_Scroller/Data_Scroller.css
@@ -14,6 +14,7 @@
     }
 
 .scroller {
+    max-height: 80vh;
     max-width: 600px;
     padding: .2rem 0;
     user-select: none;
@@ -45,14 +46,27 @@
     --_animation-direction: forwards;
 }
 
-[data-animated="true"] .scroller_inner{
+[data-animated="true"][data-axis="y"] .scroller_inner{
+    --axis: y_scroll;
+    display: grid;
+    /* width: max-content;
+    flex-wrap: nowrap;
+    animation: y_scroll var(--scroller-duration, 40s) var(--_animation-direction, forwards) linear infinite; */
+}
+[data-animated="true"] .scroller_inner, [data-animated="true"][data-axis="y"] .scroller_inner{
     width: max-content;
     flex-wrap: nowrap;
-    animation: scroll var(--scroller-duration, 40s) var(--_animation-direction, forwards) linear infinite;
+    animation: var(--axis, scroll) var(--scroller-duration, 40s) var(--_animation-direction, forwards) linear infinite;
 }
+
 @keyframes scroll {
     to{
         transform: translate(calc(-50% - 0.5rem), 0);
+    }
+}
+@keyframes y_scroll {
+    to{
+        transform: translate(0, calc(-50% - 0.5rem));
     }
 }
 
