--- a/src/components/Sections/sections.css
+++ b/src/components/Sections/sections.css
@@ -185,7 +185,7 @@ section{
     }
 /* Contact Section */
     #contact{
-        background-image: url("./src/assets/contact.svg");
+        background-image: url("./src/assets/projects.svg");
     }
 /* My Skills Section */
     .skillsScroller{
